--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-config-vusion": "^1.1.0",
-    "eslint-plugin-html": "^2.0.3"
+    "eslint-plugin-html": "^2.0.3",
+    "vue-markdown-loader": "^1.0.0"
   }
 }
