--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eslint": "^3.19.0",
     "eslint-config-vusion": "^1.1.0",
     "eslint-plugin-html": "^2.0.3",
+    "highlight.js": "^9.12.0",
+    "markdown-it-katex": "^2.0.3",
     "vue-markdown-loader": "^1.0.0"
   }
 }
