:construction: 对哲学中关于生活的意义有了进一步的思考

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "rainfore.github.io",
+  "description": "This is my website",
+  "author": "Rainfore <rainforest92@126.com>",
   "dependencies": {
     "u-base.vue": "^0.1.0",
     "vue": "^2.3.0",
