--- a/package.json
+++ b/package.json
@@ -12,7 +12,18 @@
     "eslint-config-vusion": "^1.1.0",
     "eslint-plugin-html": "^2.0.3",
     "highlight.js": "^9.12.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-container": "^2.0.0",
+    "markdown-it-deflist": "^2.0.2",
+    "markdown-it-footnote": "^3.0.1",
+    "markdown-it-implicit-figures": "^0.6.0",
+    "markdown-it-ins": "^2.0.0",
     "markdown-it-katex": "^2.0.3",
+    "markdown-it-link-attributes": "^1.0.0",
+    "markdown-it-mark": "^2.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.0.1",
     "vue-markdown-loader": "^1.0.0"
   }
 }
