--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "eslint-config-vusion": "^1.1.0",
     "eslint-plugin-html": "^2.0.3",
     "highlight.js": "^9.12.0",
+    "js-yaml": "^3.8.4",
     "markdown-it-abbr": "^1.0.4",
+    "markdown-it-anchor": "^4.0.0",
     "markdown-it-container": "^2.0.0",
     "markdown-it-deflist": "^2.0.2",
     "markdown-it-footnote": "^3.0.1",
@@ -21,6 +23,7 @@
     "markdown-it-katex": "^2.0.3",
     "markdown-it-link-attributes": "^1.0.0",
     "markdown-it-mark": "^2.0.0",
+    "markdown-it-meta": "0.0.1",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.0.1",
