--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Rainfore <rainforest92@126.com>",
   "dependencies": {
     "u-base.vue": "^0.1.0",
+    "u-button.vue": "^0.1.1",
     "vue": "^2.3.0",
     "vue-router": "^2.5.3"
   },
