:sparkles: Add partial article list

--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "eslint-plugin-html": "^2.0.3",
     "highlight.js": "^9.12.0",
     "js-yaml": "^3.8.4",
+    "loader-utils": "^1.1.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^4.0.0",
     "markdown-it-container": "^2.0.0",
     "markdown-it-deflist": "^2.0.2",
     "markdown-it-footnote": "^3.0.1",
+    "markdown-it-for-inline": "^0.1.1",
     "markdown-it-implicit-figures": "^0.6.0",
     "markdown-it-ins": "^2.0.0",
     "markdown-it-katex": "^2.0.3",
