:memo: 20170820~git的fork项目与原项目同步

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-eslint": "^7.2.3",
     "eslint": "^4.3.0",
     "eslint-config-vusion": "^1.2.0",
-    "eslint-plugin-html": "^2.0.3",
+    "eslint-plugin-html": "^3.2.1",
     "highlight.js": "^9.12.0",
     "js-yaml": "^3.8.4",
     "loader-utils": "^1.1.0",
@@ -33,6 +33,6 @@
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.0.1",
-    "vue-markdown-loader": "^1.0.0"
+    "vue-markdown-loader": "rainfore/vue-markdown-loader"
   }
 }
