:sparkles: 添加《跨产品的组件化解决方案》

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "three": "^0.86.0",
     "u-base.vue": "^0.1.0",
     "u-button.vue": "^0.1.1",
-    "vue": "^2.4.2",
-    "vue-router": "^2.5.3"
+    "vue": "^2.5.0",
+    "vue-router": "^3.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^4.3.0",
-    "eslint-config-vusion": "^1.2.0",
-    "eslint-plugin-html": "^3.2.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^4.13.1",
+    "eslint-config-vusion": "^2.0.0",
     "highlight.js": "^9.12.0",
     "js-yaml": "^3.8.4",
     "loader-utils": "^1.1.0",
@@ -33,6 +33,7 @@
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.0.1",
-    "vue-markdown-loader": "rainfore/vue-markdown-loader"
+    "vue-loader": "^13.6.0",
+    "vue-markdown-html-loader": "0.0.3"
   }
 }
