--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,10 @@
 {
-    "parser": "babel-eslint",
-    "extends": [
-        "vusion",
-        "vusion/test"
-    ],
+    "extends": "vusion/all",
     "env": {
         "browser": true,
         "node": true
     },
-    "plugins": ["html"],
-    "overrides": [{
-        "files": ["*.vue"],
-        "rules": {
-            "no-multiple-empty-lines": [1, { "max": 1, "maxEOF": 1, "maxBOF": 1 }]
-        }
-    }]
+    "rules": {
+        "vue/html-indent": [0]
+    }
 }
